# HaskellChessPuzzles

./: README.md  TechDoc.md  chess-puzzles.cabal
app/: Main.hs
src/: Main.hs
src/Chess/: Apply.hs  Board.hs  Game.hs  Gen.hs  GenCLI.hs  Legality.hs  Move.hs  MoveGen.hs  Search.hs  Setup.hs  Types.hs
test/: MoveGenSpec.hs
